@@ -614,6 +614,7 @@ Jbuilder supports the following variables:
 - =ocaml_where= is the output of =ocamlc -where=
 - =ARCH_SIXTYFOUR= is =true= if using a compiler targeting a 64 bit
   architecture and =false= otherwise
+- =null= is =/dev/null= on Unix or =nul= on Windows
 
 In addition, =(action ...)= fields support the following special variables:
 
@@ -885,7 +886,11 @@ The following constructions are available:
 - =(run <prog> <args>)= to execute a program
 - =(chdir <dir> <DSL>)= to change the current directory
 - =(setenv <var> <value> <DSL>)= to set an environment variable
-- =(with-stdout-to <file> <DSL>)= to redirect the output to a file
+- =(with-<outputs>-to <file> <DSL>)= to redirect the output to a file,
+  where =<outputs>= is one of: =stdout=, =stderr= or =outputs= (for
+  both =stdout= and =stderr=)
+- =(ignore-<outputs> <DSL)= to ignore the output, where =<outputs>= is
+  one of: =stdout=, =stderr= or =outputs=
 - =(progn <DSL>...)= to execute several commands in sequence
 - =(echo <string>)= to output a string on stdout
 - =(cat <file>)= to print the contents of a file to stdout
