@@ -8,3 +8,5 @@ val local_install_dir : context:string -> Path.t
 val local_install_bin_dir : context:string -> Path.t
 val local_install_man_dir : context:string -> Path.t
 val local_install_lib_dir : context:string -> package:string -> Path.t
+
+val dev_null : Path.t
